--- a/preamble.tex
+++ b/preamble.tex
@@ -164,6 +164,20 @@
 \newcommand*{\wi¬extrinsics}{\mathbf{x}}
 \newcommand*{\wi¬exportsegments}{e}
 
+\newcommand*{\wr¬srlookup}{\mathbf{l}}
+
+\newcommand*{\accumulated}{\xi}
+\newcommand*{\ready}{\vartheta}
+
+\newcommand*{\partialstate}{\mathbb{U}}
+\newcommand*{\defxfer}{\mathbb{T}}
+\newcommand*{\defxfers}{\seq{\defxfer}}
+\newcommand*{\beefycommitmap}{\mathbf{C}}
+
+\newcommand*{\gascounter}{\varrho}
+\newcommand*{\registers}{\omega}
+\newcommand*{\memory}{\mu}
+
 \newcommand*{\jamdraftversion}{\input{VERSION}\!\!\!}
 \newcommand*{\jamdraftversionstring}{\jamdraftversion}
 
