--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -5,15 +5,15 @@
 \subsection{Basic Definition}
 \newcommand*{\instr}[1]{\text{{\small \texttt{#1}}}}
 \newcommand*{\regs}{\seq{\N_R}_{13}}
-\newcommand*{\reg}{{\omega}}
-\newcommand*{\mem}{{\mu}}
+\newcommand*{\reg}{{\registers}}
+\newcommand*{\mem}{{\memory}}
 \newcommand*{\memr}{\mem^{\circlearrowleft}}
 \newcommand*{\memwr}{{\mem'}^{\circlearrowleft}}
 \newcommand*{\ram}{\mathbb{M}}
 \newcommand*{\rnp}[1]{P(#1)}
 \newcommand*{\rnq}[1]{Q(#1)}
 \newcommand*{\continue}{\blacktriangleright}
-\newcommand*{\gas}{\xi_\Delta}
+\newcommand*{\gas}{\gascounter_\Delta}
 \newcommand*{\instrlen}{\ell}
 \newcommand*{\bitsfunc}[1]{\mathcal{B}_{#1}}
 \newcommand*{\unbitsfunc}[1]{\bitsfunc{#1}^{-1}}
@@ -44,17 +44,17 @@ We declare the general \textsc{pvm} function $\Psi$. We assume a single-step inv
 \begin{equation}
   \Psi\colon \left\{\begin{aligned}
     (\Y, \N_R, \N_G, \regs, \ram) &\to (\{\halt, \panic, \oog\} \cup \{\fault\} \times \N_R \cup \{\host\} \times \N_R, \N_R, \Z_G, \regs, \ram)\\
-    (\mathbf{p}, \imath, \xi, \omega, \mem) &\mapsto \begin{cases}
-      \Psi(\mathbf{p}, \imath', \xi', \omega', \mem') &\when \varepsilon = \continue\\
-      (\oog, \imath', \xi', \omega', \mem') &\when \xi' < 0\\
-      (\varepsilon, \imath', \xi', \omega', \mem') &\otherwise
+    (\mathbf{p}, \imath, \gascounter, \registers, \mem) &\mapsto \begin{cases}
+      \Psi(\mathbf{p}, \imath', \gascounter', \registers', \mem') &\when \varepsilon = \continue\\
+      (\oog, \imath', \gascounter', \registers', \mem') &\when \gascounter' < 0\\
+      (\varepsilon, \imath', \gascounter', \registers', \mem') &\otherwise
     \end{cases} \\
-    \where (\varepsilon, \imath', \xi', \omega', \mem') &= \Psi_1(\mathbf{c}, \mathbf{k}, \mathbf{j}, \imath, \xi, \omega, \mem)\\
+    \where (\varepsilon, \imath', \gascounter', \registers', \mem') &= \Psi_1(\mathbf{c}, \mathbf{k}, \mathbf{j}, \imath, \gascounter, \registers, \mem)\\
     \also \mathbf{p} &= \se(|\mathbf{j}|) \frown \se_1(z) \frown \se(|\mathbf{c}|) \frown \se_z(\mathbf{j}) \frown \se(\mathbf{c}) \frown \se(\mathbf{k})\,,\ |\mathbf{k}| = |\mathbf{c}|
     \end{aligned}\right.
 \end{equation}
 
-If the latter condition cannot be satisfied, then $(\panic, \imath, \xi, \omega, \mem)$ is the result.
+If the latter condition cannot be satisfied, then $(\panic, \imath, \gascounter, \registers, \mem)$ is the result.
 
 The \textsc{pvm} exit reason $\varepsilon \in \{\halt, \panic, \oog\} \cup \{\fault, \host\} \times \N_R$ may be one of regular halt $\halt$, panic $\panic$ or out-of-gas $\oog$, or alternatively a host-call $\host$, in which the host-call identifier is associated, or page-fault $\fault$ in which case the address into \textsc{ram} is associated.
 
@@ -124,21 +124,21 @@ We must now define the single-step \textsc{pvm} state-transition function $\Psi_
 \begin{equation}
   \Psi_1\colon \left\{\begin{aligned}
     (\Y, \mathbb{B}, \seq{\N_R}, \N_R, \N_G, \regs, \ram) &\to (\{\panic, \halt, \continue \} \cup \{\fault, \host\} \times \N_R, \Z_G, \regs, \ram)\\
-    (\mathbf{c}, \mathbf{k}, \mathbf{j}, \imath, \xi, \omega, \mem) &\mapsto (\varepsilon, \imath', \xi', \omega', \mem')
+    (\mathbf{c}, \mathbf{k}, \mathbf{j}, \imath, \gascounter, \registers, \mem) &\mapsto (\varepsilon, \imath', \gascounter', \registers', \mem')
   \end{aligned}\right.
 \end{equation}
 
 We define $\varepsilon$ together with the posterior values (denoted as prime) of each of the items of the machine state as being in accordance with the table below.
 
-%We alias the registers $\omega$ to their \textsc{risc-v} specification name:
+%We alias the registers $\registers$ to their \textsc{risc-v} specification name:
 %\begin{equation}
-%  (\RA, \SP, \T_0, \T_1, \T_2, \S_0, \S_1, \A_0, \A_1, \A_2, \A_3, \A_4, \A_5) \equiv \omega,\qquad
-%  (\RA', \SP', \T_0', \T_1', \T_2', \S_0', \S_1', \A_0', \A_1', \A_2', \A_3', \A_4', \A_5') \equiv \omega'
+%  (\RA, \SP, \T_0, \T_1, \T_2, \S_0, \S_1, \A_0, \A_1, \A_2, \A_3, \A_4, \A_5) \equiv \registers,\qquad
+%  (\RA', \SP', \T_0', \T_1', \T_2', \S_0', \S_1', \A_0', \A_1', \A_2', \A_3', \A_4', \A_5') \equiv \registers'
 %\end{equation}
 
 In general, when transitioning machine state for an instruction a number of conditions hold true and instructions are defined essentially by their exceptions to these rules. Specifically, the machine does not halt, the instruction counter increments by one, the gas remaining is reduced by the amount corresponding to the instruction type and \textsc{ram} \& registers are unchanged. Formally:
 \begin{equation}
-  \varepsilon = \continue,\quad \imath' = \imath + 1 + \Fskip(\imath),\quad \xi' = \xi - \gas,\quad \omega' = \omega,\quad\mem' = \mem \text{ except as indicated }
+  \varepsilon = \continue,\quad \imath' = \imath + 1 + \Fskip(\imath),\quad \gascounter' = \gascounter - \gas,\quad \registers' = \registers,\quad\mem' = \mem \text{ except as indicated }
 \end{equation}
 
 Where \textsc{ram} must be inspected and yet access is not possible, then machine state is unchanged, and the exit reason is a fault with the lowest address to be read which is inaccessible. More formally, let $\mathbf{a}$ be the set of indices in to which $\mem$ must be subscripted in order to calculate the result of $\Psi_1$. If $\mathbf{a} \not\subset \mathbb{V}_\mem$ then let $\varepsilon=\fault \times \text{min}(\mathbf{a} \setminus \mathbb{V}_\mem)$.
@@ -391,8 +391,8 @@ We assume the skip length $\ell$ is well-defined:
   87&\token{sbrk}&0&$\begin{aligned}
     \reg'_D \equiv &\min(x \in \N_R): \\
     &x \ge h\\
-    &\N_{x\dots+\reg_A} \not\in \mathbb{V}_{\mu}\\
-    &\N_{x\dots+\reg_A} \in \mathbb{V}^*_{\mu'}
+    &\N_{x\dots+\reg_A} \not\in \mathbb{V}_{\memory}\\
+    &\N_{x\dots+\reg_A} \in \mathbb{V}^*_{\memory'}
   \end{aligned}$\\
 \bottomrule
 \end{longtable}
@@ -581,23 +581,38 @@ Note, the term $h$ above refers to the beginning of the heap, the second major s
 \subsection{Host Call Definition}
 
 An extended version of the \textsc{pvm} invocation which is able to progress an inner \emph{host-call} state-machine in the case of a host-call halt condition is defined as $\Psi_H$:
-\begin{equation}
-  \Psi_H\colon \left\{\begin{aligned}
-    (\Y, \N_R, \N_G, \regs, \ram, \Omega_X, X) &\to (\{\panic, \oog, \halt\} \cup \{\fault\} \times \N_R, \Z_G, \regs, \ram, X)\\
-    (\mathbf{c}, \imath, \xi, \omega, \mem, f, \mathbf{x}) &\mapsto \begin{cases}
-      (\fault \times a, \imath', \xi', \omega', \mem', \mathbf{x}) &\when \bigwedge\left\{\;\begin{aligned}
-        &\varepsilon = \host \times h\\[2pt]
-        &\fault \times a = f(h, \xi', \omega', \mem', \mathbf{x})\\[2pt]
-      \end{aligned}\right.\\[8 pt]
-      \Psi_H(\mathbf{c}, \imath' + 1 + \Fskip(\imath'), \xi'', \omega'', \mem'', f, \mathbf{x}'') &\when \bigwedge\left\{\;\begin{aligned}
-        &\varepsilon = \host \times h\\[2pt]
-        &(\xi'', \omega'', \mem'', \mathbf{x}'') = f(h, \xi', \omega', \mem', \mathbf{x})
+\begin{align}
+  &\Psi_H\colon \left\{\begin{aligned}
+    \tuple{\begin{aligned}
+      &\Y, \N_R, \N_G, \regs,\\&\ram, \Omega\langle X \rangle, X
+    \end{aligned}
+    }
+    &\to
+    \tuple{\{\panic, \oog, \halt\} \cup \{\fault\} \times \N_R, \Z_G, \regs, \ram, X}\\
+    (\mathbf{c}, \imath, \gascounter, \registers, \mem, f, \mathbf{x}) &\mapsto \begin{cases}
+      \multicolumn{2}{l}{\text{let }(\varepsilon', \imath', \gascounter', \registers', \mem') = \Psi(\mathbf{c}, \imath, \gascounter, \registers, \mem):} \\[8pt]
+      (\varepsilon', \imath', \gascounter', \registers', \mem', \mathbf{x}) &\when \varepsilon' \in \{ \halt, \panic, \oog \} \cup \{\fault\} \times \N_R \\[4pt]
+      (\fault \times a, \imath', \gascounter', \registers', \mem', \mathbf{x}) &\when \bigwedge\left\{\;\begin{aligned}
+        &\varepsilon' = \host \times h\\[2pt]
+        &\fault \times a = f(h, \gascounter', \registers', \mem', \mathbf{x})\\[2pt]
+      \end{aligned}\right.\\[10 pt]
+      \begin{aligned}
+        &\Psi_H(\mathbf{c}, \imath'', \gascounter'', \registers'', \mem'', f, \mathbf{x}'')\\[2pt]
+        &\quad\where\imath'' = \imath' + 1 + \Fskip(\imath')\\
+      \end{aligned}
+       &\when \bigwedge\left\{\;\begin{aligned}
+        &\varepsilon' = \host \times h\\[2pt]
+        &(\continue, \gascounter'', \registers'', \mem'', \mathbf{x}'') = f(h, \gascounter', \registers', \mem', \mathbf{x})
       \end{aligned}\right.\\[8pt]
-      (\varepsilon, \imath', \xi', \omega', \mem', \mathbf{x}) &\otherwise
+      (\varepsilon'', \imath', \gascounter'', \registers'', \mem'', \mathbf{x}'') &\when  \bigwedge\left\{\;\begin{aligned}
+        &\varepsilon' = \host \times h\\[2pt]
+        &(\varepsilon'', \gascounter'', \registers'', \mem'', \mathbf{x}'') = f(h, \gascounter', \registers', \mem', \mathbf{x})\\[2pt]
+        &\varepsilon'' \in \{\panic, \halt, \oog\}
+      \end{aligned}\right.\\[8pt]
     \end{cases} \\
-    \where (\varepsilon, \imath', \xi', \omega', \mem') &= \Psi(\mathbf{c}, \imath, \xi, \omega, \mem)\\
-    \end{aligned}\right.
-\end{equation}
+    \end{aligned}\right.\!\!\!\!\!\!\!\!\\
+    &\Omega\langle X \rangle \equiv (\N, \N_G, \regs, \ram, X) \to \tuple{\{\continue, \halt, \panic, \oog\}, \N_G, \regs, \ram, X} \cup \{\fault\} \times \N_R
+\end{align}
 
 On exit, the instruction counter $\imath'$ references the instruction \emph{which caused the exit}. Should the machine be invoked again using this instruction counter and code, then the same instruction which caused the exit would be executed. This is sensible when the instruction is one which necessarily needs re-executing such as in the case of an out-of-gas or page fault reason.
 
@@ -608,21 +623,24 @@ We use both values of instruction-counter for the definition of $\Psi_H$ since i
 \subsection{Standard Program Initialization}\label{sec:standardprograminit}
 The software programs which will run in each of the four instances where the \textsc{pvm} is utilized in the main document have a very typical setup pattern characteristic of an output of a compiler and linker. This means sections for program-specific read-only data, read-write (heap) data and the stack. An adjunct to this, very typical of our usage patterns is an extra read-only segment via which invocation-specific data may be passed (\ie arguments). It thus makes sense to define this properly in a single initializer function.
 
-We thus define the standard program code format $\mathbf{p}$, which includes not only the instructions and jump table (previously represented by the term $\mathbf{c}$), but also information on the state of the \textsc{ram} and registers at program start. Given some $\mathbf{p}$ which is appropriately encoded together with some argument data $\mathbf{a}$, we can define program code $\mathbf{c}$, registers $\omega$ and \textsc{ram} $\mem$ through the standard initialization decoder function $Y$:
+We thus define the standard program code format $\mathbf{p}$, which includes not only the instructions and jump table (previously represented by the term $\mathbf{c}$), but also information on the state of the \textsc{ram} and registers at program start. Given some $\mathbf{p}$ which is appropriately encoded together with some argument data $\mathbf{a}$, we can define program code $\mathbf{c}$, registers $\registers$ and \textsc{ram} $\mem$ through the standard initialization decoder function $Y$:
 \begin{equation}
 Y\colon\left\{\begin{aligned}
   \Y &\to (\Y, \regs, \ram)? \\
-  \mathbf{p} &\mapsto x
+  \mathbf{p} &\mapsto \begin{cases}
+    (\mathbf{c}, \registers, \mem) &\when \exists! (\mathbf{c}, \mathbf{o}, \mathbf{w}, z, s) \text{ which satisfy equation \ref{eq:conditions}}\\
+    \none &\otherwise
+  \end{cases}
 \end{aligned}\right.
 \end{equation}
-Where:
-\begin{align}
+With conditions:
+\begin{align}\label{eq:conditions}
   &\using \mathcal{E}_3(|\mathbf{o}|) \concat \mathcal{E}_3(|\mathbf{w}|) \concat \mathcal{E}_2(z) \concat \mathcal{E}_3(s) \concat \mathbf{o} \concat \mathbf{w} \concat \mathcal{E}_4(|\mathbf{c}|) \concat \mathbf{c} = \mathbf{p}\\
   &\mathsf{Z}_P = 2^{14}\ ,\quad\mathsf{Z}_Q = 2^{16}\ ,\quad\mathsf{Z}_I = 2^{24}\\
   &\using \rnp{x \in \N} \equiv \mathsf{Z}_P\left\lceil \frac{x}{\mathsf{Z}_P} \right\rceil\quad,\qquad\rnq{x \in \N} \equiv \mathsf{Z}_Q\left\lceil \frac{x}{\mathsf{Z}_Q} \right\rceil\\
   &5\mathsf{Z}_Q + Q(|\mathbf{o}|) + Q(|\mathbf{w}| + z\mathsf{Z}_P) + Q(s) + \mathsf{Z}_I \leq 2^{32}
 \end{align}
-If the above cannot be satisfied, then $x = \none$, otherwise $x = (\mathbf{c}, \omega, \mem)$ with $\mathbf{c}$ as above and $\mem$, $\omega$ such that:
+Thus, if the above conditions cannot be satisfied with unique values, then the result is $\none$, otherwise it is a tuple of $\mathbf{c}$ as above and $\mem$, $\registers$ such that:
 \begin{equation}\label{eq:memlayout}
   \forall i \in \N_R : \mem_i = \left\{\begin{alignedat}{5}
     &\tup{\is{\mathbf{V}}{\mathbf{o}_{i - \mathsf{Z}_Q}}\ts\is{\mathbf{A}}{R}} &&\ \when
@@ -656,12 +674,12 @@ If the above cannot be satisfied, then $x = \none$, otherwise $x = (\mathbf{c}, 
     &(0, \none) &&\otherwise&&&
   \end{alignedat}\right.\\
 \end{equation}
-\begin{equation}
-  \forall i \in \N_{16} : \omega_i = \begin{cases}
-      2^{32} - 2^{16} &\when i = 1\\
-      2^{32} - 2\mathsf{Z}_Q - \mathsf{Z}_I &\when i = 2\\
-      2^{32} - \mathsf{Z}_Q - \mathsf{Z}_I &\when i = 10\\
-      |\mathbf{a}|&\when i = 11\\
+\begin{equation}\label{eq:registers}
+  \forall i \in \N_{13} : \registers_i = \begin{cases}
+      2^{32} - 2^{16} &\when i = 0\\
+      2^{32} - 2\mathsf{Z}_Q - \mathsf{Z}_I &\when i = 1\\
+      2^{32} - \mathsf{Z}_Q - \mathsf{Z}_I &\when i = 7\\
+      |\mathbf{a}|&\when i = 8\\
       0 &\otherwise
     \end{cases}
 \end{equation}
@@ -671,16 +689,16 @@ If the above cannot be satisfied, then $x = \none$, otherwise $x = (\mathbf{c}, 
 The four instances where the \textsc{pvm} is utilized each expect to be able to pass argument data in and receive some return data back. We thus define the common \textsc{pvm} program-argument invocation function $\Psi_M$:
 \begin{align}
   \Psi_M&\colon \left\{\begin{aligned}
-    (\Y, \N, \N_G, \Y_{:\mathsf{Z}_I}, \Omega_X, X) &\to ((\N_G, \Y) \cup \{\panic, \oog\}, X)\\
-    (\mathbf{p}, \imath, \xi, \mathbf{a}, f, \mathbf{x}) &\mapsto \begin{cases}
-      (\panic, \mathbf{x}) &\when Y(\mathbf{p}) = \none\\
-      R(\Psi_H(\mathbf{c}, \imath, \xi, \omega, \mem, f, \mathbf{x})) &\when Y(\mathbf{p}) = (\mathbf{c}, \omega, \mem)
+    (\Y, \N, \N_G, \Y_{:\mathsf{Z}_I}, \Omega\langle X \rangle, X) &\to (\N_G, \Y \cup \{\panic, \oog\}, X)\\
+    (\mathbf{p}, \imath, \gascounter, \mathbf{a}, f, \mathbf{x}) &\mapsto \begin{cases}
+      (\gascounter, \panic, \mathbf{x}) &\when Y(\mathbf{p}) = \none\\
+      R(\Psi_H(\mathbf{c}, \imath, \gascounter, \registers, \mem, f, \mathbf{x})) &\when Y(\mathbf{p}) = (\mathbf{c}, \registers, \mem)
     \end{cases}
   \end{aligned}\right.\\
-  \where R&\colon (\varepsilon, \imath', \xi', \omega', \mem', \mathbf{x}) \mapsto \begin{cases}
-    (\oog, \mathbf{x}) &\when \varepsilon = \oog \\
-    ((\xi', \mu'_{\omega'_{10}\dots+\omega'_{11}}), \mathbf{x}) &\when \varepsilon = \halt \wedge \mathbb{Z}_{\omega'_{10}\dots+\omega'_{11}} \subset \mathbb{V}_{\mem'} \\
-    ((\xi', []), \mathbf{x}) &\when \varepsilon = \halt \wedge \mathbb{Z}_{\omega'_{10}\dots+\omega'_{11}} \not\subset \mathbb{V}_{\mem'} \\
-    (\panic, \mathbf{x}) &\otherwise \\
+  \where R&\colon (\varepsilon, \imath', \gascounter', \registers', \mem', \mathbf{x}) \mapsto \begin{cases}
+    (\gascounter', \oog, \mathbf{x}) &\when \varepsilon = \oog \\
+    (\gascounter', \memory'_{\registers'_{10}\dots+\registers'_{11}}, \mathbf{x}) &\when \varepsilon = \halt \wedge \mathbb{Z}_{\registers'_{10}\dots+\registers'_{11}} \subset \mathbb{V}_{\mem'} \\
+    (\gascounter', [], \mathbf{x}) &\when \varepsilon = \halt \wedge \mathbb{Z}_{\registers'_{10}\dots+\registers'_{11}} \not\subset \mathbb{V}_{\mem'} \\
+    (\gascounter', \panic, \mathbf{x}) &\otherwise \\
   \end{cases}
 \end{align}
