--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -21,25 +21,27 @@ The state of the reporting and availability portion of the protocol is largely c
 As usual, intermediate and posterior values ($\rho^\dagger$, $\rho^\ddagger$, $\rho'$) are held under the same constraints as the prior value.
 
 \subsubsection{Work Report}\label{sec:workreport}
-A work-report, of the set $\mathbb{W}$, is defined as a tuple of the work-package specification $s$, the refinement context $x$, and the core-index (\ie on which the work is done) as well as the authorizer hash $a$ and output $\mathbf{o}$ and finally the results of the evaluation of each of the items in the package $\mathbf{r}$, which is always at least one item and may be no more than $\mathsf{I}$ items. Formally:
+A work-report, of the set $\mathbb{W}$, is defined as a tuple of the work-package specification $s$, the refinement context $x$, and the core-index (\ie on which the work is done) as well as the authorizer hash $a$ and output $\mathbf{o}$, a segment-root lookup dictionary $\wr¬srlookup$, and finally the results of the evaluation of each of the items in the package $\mathbf{r}$, which is always at least one item and may be no more than $\mathsf{I}$ items. Formally:
 \begin{equation}\label{eq:workreport}
-  \mathbb{W} \equiv \tuple{
-    \isa{s}{\mathbb{S}}\ts
-    \isa{x}{\mathbb{X}}\ts
-    \isa{c}{\N_\mathsf{C}}\ts
-    \isa{a}{\H}\ts
-    \isa{\mathbf{o}}{\Y}\ts
+\mathbb{W} \equiv \tuple{
+  \begin{aligned}
+    &\isa{s}{\mathbb{S}},\ 
+    \isa{x}{\mathbb{X}},\ 
+    \isa{c}{\N_\mathsf{C}},\ 
+    \isa{a}{\H},\\
+    &\isa{\mathbf{o}}{\Y},\ 
+    \isa{\wr¬srlookup}{\dict{\H}{\H}},\ 
     \isa{\mathbf{r}}{\seq{\mathbb{L}}_{1:\mathsf{I}}}
-  }
+  \end{aligned}
+}
 \end{equation}
 
-% TODO: places where w \in \mathbb{W} : w_o should be replaced with w_\mathbb{o} and w_r with w_\mathbb{r}
+% TODO: places where w \in \mathbb{W} : w_o should be replaced with w_\mathbf{o} and w_r with w_\mathbf{r}
 
-The total serialized size of a work-report may be no greater than $\mathsf{W}_R$ bytes:
+We limit the number of items in the segment-root lookup dictionary to 8, and the total serialized size of a work-report may be no greater than $\mathsf{W}_R$ bytes:
 \begin{equation}
-  \forall w \in \mathbb{W} : |\se(w)| \leq \mathsf{W}_R
+  \forall w \in \mathbb{W} : |w_\wr¬srlookup| \le 8\ \wedge\ |\se(w)| \leq \mathsf{W}_R
 \end{equation}
-
 
 \subsubsection{Refinement Context}
 A \emph{refinement context}, denoted by the set $\mathbb{X}$, describes the context of the chain at the point that the report's corresponding work-package was evaluated. It identifies two historical blocks, the \emph{anchor}, header hash $a$ along with its associated posterior state-root $s$ and posterior \textsc{Beefy} root $b$; and the \emph{lookup-anchor}, header hash $l$ and of timeslot $t$. Finally, it identifies the hash of an optional prerequisite work-package $p$. Formally:
@@ -67,6 +69,8 @@ The \emph{segment-root} ($e$) is the root of a constant-depth, left-biased and z
 
 \subsubsection{Work Result}
 We finally come to define a \emph{work result}, $\mathbb{L}$, which is the data conduit by which services' states may be altered through the computation done within a work-package.
+
+%TODO: make o bold.
 \begin{align}\label{eq:workresult}
   \mathbb{L} &\equiv (s \in \N_S, c \in \H, l \in \H, g \in \N_G, o \in \Y \cup \mathbb{J})
 \end{align}
@@ -80,7 +84,7 @@ Finally, there is the output or error of the execution of the code $o$, which ma
   \mathbb{J} \in \{ \oog, \panic, \token{BAD}, \token{BIG} \}
 \end{align}
 
-The first two are special values concerning execution of the virtual machine, $\oog$ denoting an out-of-gas error and $\panic$ denoting an unexpected program termination. Of the remaining two, the first indicates that the service's code was not available for lookup in state at the posterior state of the lookup-anchor block. The second indicates that the code was available but was beyond the maximum size allowed $\mathsf{S}$.
+The first two are special values concerning execution of the virtual machine, $\oog$ denoting an out-of-gas error and $\panic$ denoting an unexpected program termination. Of the remaining two, the first indicates that the service's code was not available for lookup in state at the posterior state of the lookup-anchor block. The second indicates that the code was available but was beyond the maximum size allowed $\mathsf{W}_C$.
 
 
 
@@ -118,7 +122,7 @@ A bit may only be set if the corresponding core has a report pending availabilit
 \end{align}
 
 \subsubsection{Available Reports}
-A work-report is said to become \emph{available} if and only if there are a clear \nicefrac{2}{3} super-majority of validators who have marked its core as set within the block's assurance extrinsic. Formally, we define the series of available work-reports $\mathbf{W}$ as:
+A work-report is said to become \emph{available} if and only if there are a clear \nicefrac{2}{3} super-majority of validators who have marked its core as set within the block's assurance extrinsic. Formally, we define the sequence of newly available work-reports $\mathbf{W}$ as:
 \begin{align}\label{eq:availableworkreports}
   \mathbf{W} &\equiv \left[\rho^\dagger[c]_w\,\middle\vert\,c \orderedin \N_\mathsf{C},\;\sum_{a \in \xtassurances}\!a_f[c]\,>\,\nicefrac{2}{3}\,\mathsf{V}\right]
 \end{align}
@@ -232,10 +236,12 @@ No reports may be placed on cores with a report pending availability on it unles
   \end{aligned}\right.
 \end{equation}
 
-We specify the maximum total accumulation gas requirement a work-report may imply as $\mathsf{G}_A$, and we require the sum of all services' minimum gas requirements to be no greater than this:
-\begin{align}
-  \forall w \in \mathbf{w}: \sum_{s \in (w_r)_s}{\delta[s]_g}\ \le\ \mathsf{G}_A
-\end{align}
+We require that the gas allotted for accumulation of each work item in each work-report respects its service's minimum gas requirements. We also require that all work-reports total allotted accumulation gas is no greater than the overall gas limit $\mathsf{G}_A$:
+\begin{equation}
+  \forall w \in \mathbf{w}:
+    \sum_{r \in w_\mathbf{r}}\!(r_g) \le \mathsf{G}_A \ \wedge \ 
+    \forall r \in w_\mathbf{r}: r_g \ge \delta[r_s]_g
+\end{equation}
 
 
 
