--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -22,7 +22,7 @@ We define anonymous tuples to be encoded as the concatenation of their encoded e
 
 Passing multiple arguments to the serialization functions is equivalent to passing a tuple of those arguments. Formally:
 \begin{align}
-  \se(a, b, c, \dots) &\equiv \se(\tup{a, b, c, \dots})
+  \se(a, b, \dots) &\equiv \se(\tup{a, b, \dots})
 \end{align}
 
 \subsubsection{Integer Encoding}
@@ -135,11 +135,19 @@ A block $\mathbf{B}$ is serialized as a tuple of its elements in regular order, 
   \se_U(\mathbf{H}) &= \se(\mathbf{H}_p,\mathbf{H}_r,\mathbf{H}_x)\concat\se_4(\mathbf{H}_t)\concat\se(\maybe{\mathbf{H}_e},\maybe{\mathbf{H}_w},\var{\mathbf{H}_o},\se_2(\mathbf{H}_i),\mathbf{H}_v)\\
   \se(x \in \mathbb{X}) &\equiv \se(x_a, x_s, x_b, x_l)\concat\se_4(x_t)\concat\se(\maybe{x_p})\\
   \se(x \in \mathbb{S}) &\equiv \se(x_h) \concat \se_4(x_l)\concat\se(x_u, x_e) \\
-  \se(x \in \mathbb{L}) &\equiv \se_4(x_s)\concat\se(x_c, x_l)\concat\se_8(x_g)\concat\se(O(x_o))\\
-  \se(x \in \mathbb{W}) &\equiv \se(x_s, x_x, x_c, x_a, \var{x_o}, \var{x_r}) \\
+  \se(x \in \mathbb{L}) &\equiv \se_4(x_s)\concat\se(x_c, x_l)\concat\se_8(x_g)\concat\se(O(x_\mathbf{o}))\\
+  \se(x \in \mathbb{W}) &\equiv \se(x_s, x_x, x_c, x_a, \var{x_\mathbf{o}}, \var{x_\mathbf{l}}, \var{x_\mathbf{r}}) \\
   \se(x \in \mathbb{P}) &\equiv \se(\var{x_\wp¬authtoken}, \se_4(x_\wp¬authcodehost), x_\wp¬authcodehash, \var{x_\wp¬authparam}, x_\wp¬context, \var{x_\wp¬workitems}) \\
   % TODO: \se_4(i) should be just \se(i), but we should wait for this to be written.
-  \se(x \in \mathbb{I}) &\equiv \se(\se_4(x_s), x_c, \var{x_\mathbf{y}}, \se_8(x_g), \var{\sq{(h, \se_2(i)) \mid (h, i) \orderedin x_\mathbf{i}}}, \var{\sq{(h, \se_4(i)) \mid (h, i) \orderedin x_\mathbf{x}}}, \se_2(x_e)) \\
+  \se(x \in \mathbb{I}) &\equiv \se(
+    \se_4(x_s),
+    x_c,
+    \var{x_\mathbf{y}},
+    \se_8(x_g),
+    \var{\se_I^\#(x_\mathbf{i})},
+    \var{\sq{(h, \se_4(i)) \mid (h, i) \orderedin x_\mathbf{x}}},
+    \se_2(x_e)
+  ) \\
   \se(x \in \mathbb{C}) &\equiv \se(x_\mathbf{y}, x_r) \\
   O(o \in \mathbb{J} \cup \Y) &\equiv \begin{cases}
     (0, \var{o}) &\when o \in \Y \\
@@ -147,6 +155,10 @@ A block $\mathbf{B}$ is serialized as a tuple of its elements in regular order, 
     2 &\when o = \panic \\
     3 &\when o = \token{BAD} \\
     4 &\when o = \token{BIG} \\
+  \end{cases}\\
+  \se_I(h \in \H \cup \H^\boxplus, i \in \N_{2^{15}}) &\equiv \begin{cases}
+    (h, \se_2(i)) &\when h \in \H\\
+    (r, \se_2(i + 2^{15})) &\when \exists r \in \H, h = r^\boxplus\\
   \end{cases}
 \end{align}
 
