--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -3,7 +3,8 @@
 \newcommand*{\newavailabilityspecifier}{A}
 \newcommand*{\itemtoresult}{C}
 \newcommand*{\countupexports}{I}
-\newcommand*{\importsegmentdata}{M}
+\newcommand*{\importsegmentdata}{S}
+\newcommand*{\justifysegmentdata}{J}
 \newcommand*{\pagedproofs}{P}
 \newcommand*{\marshallrefine}{R}
 \newcommand*{\extrinsicdata}{X}
@@ -20,13 +21,13 @@ Beyond the production of blocks, incentivized honest behavior includes:
 \begin{itemize}
     \item the guaranteeing and reporting of work-packages, along with chunking and distribution of both the chunks and the work-package itself, discussed in section \ref{sec:guaranteeing};
     \item assuring the availability of work-packages after being in receipt of their data;
-    \item determining which work-reports to audit, fetching and auditing them, and creating and distributing judgements appropriately based on the outcome of the audit;
+    \item determining which work-reports to audit, fetching and auditing them, and creating and distributing judgments appropriately based on the outcome of the audit;
     \item submitting the correct amount of auditing work seen being done by other validators, discussed in section \ref{sec:bookkeeping}.
 \end{itemize}
 
 \subsection{Segments and the Manifest}
 
-Our basic erasure-coding segment size is $\mathsf{W}_C = 684$ octets, derived from the fact we wish to be able to reconstruct even should almost two-thirds of our 1023 participants be malicious or incapacitated, the 16-bit Galois field on which the erasure-code is based and the desire to efficiently support encoding data of close to, but no less than, 4\textsc{kb}.
+Our basic erasure-coding segment size is $\mathsf{W}_E = 684$ octets, derived from the fact we wish to be able to reconstruct even should almost two-thirds of our 1023 participants be malicious or incapacitated, the 16-bit Galois field on which the erasure-code is based and the desire to efficiently support encoding data of close to, but no less than, 4\textsc{kb}.
 
 Work-packages are generally small to ensure guarantors need not invest a lot of bandwidth in order to discover whether they can get paid for their evaluation into a work-report. Rather than having much data inline, they instead \emph{reference} data through commitments. The simplest commitments are extrinsic data.
 
@@ -36,9 +37,9 @@ Work-packages have two other types of external data associated with them: A cryp
 
 \subsubsection{Segments, Imports and Exports}
 
-The ability to communicate large amounts of data from one work-package to some subsequent work-package is a key feature of the \Jam availability system. An export segment, defined as the set $\G$, is an octet sequence of fixed length $\mathsf{W}_S\mathsf{W}_C = 4104$. It is the smallest datum which may individually be imported from---or exported to---the long-term \emph{Imports DA} during the Refine function of a work-package. Being an exact multiple of the erasure-coding piece size ensures that the data segments of work-package can be efficiently placed in the DA system.
+The ability to communicate large amounts of data from one work-package to some subsequent work-package is a key feature of the \Jam availability system. An export segment, defined as the set $\G$, is an octet sequence of fixed length $\mathsf{W}_S\mathsf{W}_E = 4104$. It is the smallest datum which may individually be imported from---or exported to---the long-term \emph{Imports DA} during the Refine function of a work-package. Being an exact multiple of the erasure-coding piece size ensures that the data segments of work-package can be efficiently placed in the DA system.
 \begin{equation}\label{eq:segment}
-  \G \equiv \Y_{\mathsf{W}_S\mathsf{W}_C}
+  \G \equiv \Y_{\mathsf{W}_S\mathsf{W}_E}
 \end{equation}
 
 Exported segments are data which are \emph{generated} through the execution of the Refine logic and thus are a side effect of transforming the work-package into a work-report. Since their data is deterministic based on the execution of the Refine logic, we do not require any particular commitment to them in the work-package beyond knowing how many are associated with each Refine invocation in order that we can supply an exact index.
@@ -59,31 +60,37 @@ The guarantor is able to use this proof to justify to themselves that they are n
 
 We begin by defining a \emph{work-package}, of set $\mathbb{P}$, and its constituent \emph{work item}s, of set $\mathbb{I}$. A work-package includes a simple blob acting as an authorization token $\wp¬authtoken$, the index of the service which hosts the authorization code $\wp¬authcodehost$, an authorization code hash $\wp¬authcodehash$ and a parameterization blob $\wp¬authparam$, a context $\wp¬context$ and a sequence of work items $\wp¬workitems$:
 \begin{equation}\label{eq:workpackage}
-  \mathbb{P} \equiv \tuple{\;\begin{aligned}
-    &\isa{\wp¬authtoken}{\Y},\ \isa{\wp¬authcodehost}{\N_S},\ \isa{\wp¬authcodehash}{\H},\\
-    &\isa{\wp¬authparam}{\Y},\ \isa{\wp¬context}{\mathbb{X}},\ \isa{\wp¬workitems}{\seq{\mathbb{I}}_{1:\mathsf{I}}}
+  \mathbb{P} \equiv \tuple{
+    \isa{\wp¬authtoken}{\Y},\ 
+    \isa{\wp¬authcodehost}{\N_S},\ 
+    \isa{\wp¬authcodehash}{\H},\ 
+    \isa{\wp¬authparam}{\Y},\ 
+    \isa{\wp¬context}{\mathbb{X}},\ 
+    \isa{\wp¬workitems}{\seq{\mathbb{I}}_{1:\mathsf{I}}}
+  }
+\end{equation}
+
+A work item includes: $s$ the identifier of the service to which it relates, the code hash of the service at the time of reporting $c$ (whose preimage must be available from the perspective of the lookup anchor block), a payload blob $\mathbf{y}$, a gas limit $g$, and the three elements of its manifest, a sequence of imported data segments $\wi¬importsegments$ which identify a prior exported segment through an index and the identity of an exporting work-package, $\wi¬extrinsics$, a sequence of blob hashes and lengths to be introduced in this block (and which we assume the validator knows) and $\wi¬exportsegments$ the number of data segments exported by this work item.
+\begin{equation}\label{eq:workitem}
+  \mathbb{I} \equiv \tuple{\begin{aligned}
+    &\isa{s}{\N_S},
+    \isa{c}{\H},
+    \isa{\mathbf{y}}{\Y},
+    \isa{g}{\N_G},
+    \isa{\wi¬exportsegments}{\N}, \\
+    &\isa{\wi¬importsegments}{\seq{\tuple{\H \cup (\H^\boxplus),\N}}},
+    \isa{\wi¬extrinsics}{\seq{(\H, \N)}}
   \end{aligned}}
 \end{equation}
 
-A work item includes: $s$ the identifier of the service to which it relates, the code hash of the service at the time of reporting $c$ (whose preimage must be available from the perspective of the lookup anchor block), a payload blob $\mathbf{y}$, a gas limit $g$, and the three elements of its manifest, a sequence of imported data segments $\wi¬importsegments$ identified by the root of the \emph{segments tree} and an index into it, $\wi¬extrinsics$, a sequence of hashed of blob hashes and lengths to be introduced in this block (and which we assume the validator knows) and $\wi¬exportsegments$ the number of data segments exported by this work item:
-\begin{equation}\label{eq:workitem}
-    \mathbb{I} \equiv \tuple{\begin{aligned}
-      &\isa{s}{\N_S} \ts
-      \isa{c}{\H} \ts
-      \isa{\mathbf{y}}{\Y} \ts
-      \isa{g}{\N_G} \ts \\
-      &\isa{\wi¬importsegments}{\seq{\tuple{\H,\N}}} \ts
-      \isa{\wi¬extrinsics}{\seq{(\H, \N)}} \ts
-      \isa{\wi¬exportsegments}{\N}
-    \end{aligned}}
-\end{equation}
+Note that an imported data segment's work-package is identified through the union of sets $\H$ and a tagged variant $\H^\boxplus$. A value drawn from the regular $\H$ implies the hash value is of the segment-root containing the export, whereas a value drawn from $\H^\boxplus$ implies the hash value is the hash of the exporting work-package. In the latter case it must be converted into a segment-root by the guarantor and this conversion reported in the work-report for on-chain validation.
 
-We limit the total number of exported items to $\mathsf{W}_M = 2^{11}$. We also place the same limit on the total number of imported items:
-\begin{align}
+We limit both the total number of exported items and the total number of imported items to $\mathsf{W}_M = 2^{11}$:
+\begin{equation}
   \forall \wpX \in \mathbb{P}:
-  \sum_{\wiX \in \wpX_\wp¬workitems} \wiX_\wi¬exportsegments &\le \mathsf{W}_M \ \wedge\ 
+  \sum_{\wiX \in \wpX_\wp¬workitems} \wiX_\wi¬exportsegments \le \mathsf{W}_M \ \wedge\ 
   \sum_{\wiX \in \wpX_\wp¬workitems} |\wiX_\wi¬importsegments| \le \mathsf{W}_M
-\end{align}
+\end{equation}
 
 We make an assumption that the preimage to each extrinsic hash in each work-item is known by the guarantor. In general this data will be passed to the guarantor alongside the work-package.
 
@@ -91,7 +98,7 @@ We limit the encoded size of a work-package plus the total size of the implied i
 \begin{align}
   \label{eq:checkextractsize}
   \forall \wpX &\in \mathbb{P}: \left(
-  \sum_{\wiX \in \wpX_\wp¬workitems} |\wiX_\wi¬importsegments|\cdot\mathsf{W}_S\mathsf{W}_C + \sum_{\wiX \in \wpX_\wp¬workitems} \sum_{(h, l) \in \wiX_\wi¬extrinsics} \!\!\!l\right) \le \mathsf{W}_P \\
+  \sum_{\wiX \in \wpX_\wp¬workitems} |\wiX_\wi¬importsegments|\cdot\mathsf{W}_S\mathsf{W}_E + \sum_{\wiX \in \wpX_\wp¬workitems} \sum_{(h, l) \in \wiX_\wi¬extrinsics} \!\!\!l\right) \le \mathsf{W}_P \\
   \mathsf{W}_P &= 12\cdot2^{20}
 \end{align}
 
@@ -119,23 +126,22 @@ We define the work-package's implied authorizer as $\wpX_\wp¬authorizer$, the h
 \subsubsection{Exporting}
 Any of a work-package's work-items may \emph{export} segments and a \emph{segments-root} is placed in the work-report committing to these, ordered according to the work-item which is exporting. It is formed as the root of a constant-depth binary Merkle tree as defined in equation \ref{eq:constantdepthmerkleroot}.
 
-Guarantors are required to erasure-code and distribute two data sets: one blob, the auditable work-package containing the encoded work-package, extrinsic data and self-justifying imported segments which is placed in the short-term Audit DA store and a second set of exported-segments data together with the \emph{Paged-Proofs} metadata. Items in the first store are short-lived; assurers are expected to keep them only until finality of the block which included the work-result. Items in the second, meanwhile, are long-lived and expected to be kept for a minimum of 28 days (672 complete epochs) following the reporting of the work-report.
+Guarantors are required to erasure-code and distribute two data sets: one blob, the auditable work-package containing the encoded work-package, extrinsic data and self-justifying imported segments which is placed in the short-term Audit DA store and a second set of exported-segments data together with the \emph{Paged-Proofs} metadata. Items in the first store are short-lived; assurers are expected to keep them only until finality of the block in which the availability of the work-result's work-package is assured. Items in the second, meanwhile, are long-lived and expected to be kept for a minimum of 28 days (672 complete epochs) following the reporting of the work-report.
 
 We define the paged-proofs function $\pagedproofs$ which accepts a series of exported segments $\mathbf{s}$ and defines some series of additional segments placed into the Imports DA system via erasure-coding and distribution. The function evaluates to pages of hashes, together with subtree proofs, such that justifications of correctness based on a segments-root may be made from it:
 \begin{equation}\label{eq:pagedproofs}
-  \pagedproofs\colon\left\{\begin{aligned}
+  \!\!\pagedproofs\colon\left\{\begin{aligned}
     \seq{\G} \to \,&\seq{\G} \\
-    \mathbf{s} \mapsto \,&[
+    \mathbf{s} \mapsto \,&\sq{
       \mathcal{P}_l(\se(
         \var{\mathcal{J}_6(\mathbf{s}, i)},
         \var{\mathbf{s}_{i\dots+64}}
       ))
       \mid i \orderedin 64\cdot\N_{\ceil{\nicefrac{|\mathbf{s}|}{64}}}
-    ] \\
-    & \where l = \mathsf{W}_S\mathsf{W}_C
-  \end{aligned}\right.
+    } \\
+    & \where l = \mathsf{W}_S\mathsf{W}_E
+  \end{aligned}\right.\!\!\!\!
 \end{equation}
-
 
 Note: in the case that $|\mathbf{s}|$ is not a multiple of 64, then the term $\mathbf{s}_{i\dots+64}$ will correctly refer to fewer than 64 elements if it is the final page.
 
@@ -149,68 +155,84 @@ Formally:
     (\mathbb{P}, \N_\mathsf{C}) &\to \mathbb{W} \\
     (\wpX, c) &\mapsto \begin{cases}
         \error &\when \mathbf{o} \not\in \Y \\
-        \tup{\is{a}{\wpX_\wp¬authorizer}, \mathbf{o}, \is{x}{\wpX_\wp¬context}, s, \mathbf{r}} \!\!\!\!\!&\otherwise
+        \tup{\is{a}{\wpX_\wp¬authorizer}, \mathbf{o}, \is{x}{\wpX_\wp¬context}, s, \mathbf{l}, \mathbf{r}} \!\!\!\!\!&\otherwise
     \end{cases}
   \end{aligned}\right.\!\!\!\!\!\!\!
 \end{equation}
 
-where:
+Where:
 \begin{align*}
-  \mathbf{o} &= \Psi_I(\wpX, c) \\
-  (\mathbf{r}, \overline{\mathbf{e}}) &= \transpose[
+  \keys{\mathbf{l}} \equiv \,&\{ h \mid w \in p_\mathbf{w}, (h^\boxplus, n) \in w_\mathbf{i} \} \ ,\quad|\mathbf{l}| \le 8\\
+  \mathbf{o} = \,&\Psi_I(\wpX, c) \\
+  (\mathbf{r}, \overline{\mathbf{e}}) = \,&\transpose[
     (\itemtoresult(\wpX_\wp¬workitems[j], r), \mathbf{e})
     \mid
     (r, \mathbf{e}) = \countupexports(\wpX, j),
     j \orderedin \N_{|\wpX_\wp¬workitems|}
   ] \\
-  \countupexports(\wpX, j) &\equiv \marshallrefine(
-    \wpX,
-    \wpX_\wp¬workitems[j],
-    \sum_{k < j}\wpX_\wp¬workitems[k]_\wi¬exportsegments
-  )\\
-  \marshallrefine(\wpX, w, \ell) &\equiv \\
-  &\!\!\!\!\!\!\!\Psi_R(
+  \countupexports(\wpX, j) \equiv \,&\Psi_R(
     \wiX_c,
     \wiX_g,
     \wiX_s,
-    \mathcal{H}(\wpX),
+    h,
     \wiX_\mathbf{y},
     \wpX_\wp¬context,
     \wpX_\wp¬authorizer,
-    \importsegmentdata(w),
+    \mathbf{o},
+    \importsegmentdata(w, \mathbf{l}),
     \extrinsicdata(w),
     \ell
-  )
+  )\\
+  &\also h = \mathcal{H}(\wpX)\,,\; w = \wpX_\wp¬workitems[j]\,,\; \ell = \sum_{k < j}\wpX_\wp¬workitems[k]_\wi¬exportsegments
 \end{align*}
 
-The definition here is staged over several functions for ease of reading. The first term to be introduced, $\mathbf{o}$ is the authorization output, the result of the Is-Authorized function. The second term, $(\mathbf{r}, \overline{\mathbf{e}})$ is the sequence of results for each of the work-items in the work-package together with all segments exported by each work-item.
+Initially we constrain the segment-root dictionary $\mathbf{l}$: It should contain entries for all unique work-package hashes of imported segments not identified directly via a segment-root but rather through a work-package hash.
 
-The third and forth definition are helper terms for this, with the third $\countupexports$ performing an ordered accumulation (\ie counter) in order to ensure that the Refine function has access to the total number of exports made from the work-package up to the current work-item. The fourth term, $\marshallrefine$, is essentially just a call to the Refine function, marshalling the relevant data from the work-package and work-item.
+We immediately define the segment-root lookup function $L$, dependent on this dictionary, which collapses a union of segment-roots and work-package hashes into segment-roots using the dictionary:
+\begin{equation}
+  L(r \in \H\cup\H^\boxplus) \equiv \begin{cases}
+    r &\when r \in \H \\
+    \mathbf{l}[h] &\when \exists h \in \H: r = h^\boxplus
+  \end{cases}
+\end{equation}
 
+In order to expect to be compensated for a work-report they are building, guarantors must compose a value for $\mathbf{l}$ to ensure not only the above but also a further constraint that all pairs of work-package hashes and segment-roots do properly correspond:
+\begin{equation}
+  \forall (h \mapsto e) \in \mathbf{l} : \exists p, c \in \mathbb{P}, \N_\mathsf{C} : \mathcal{H}(p) = h \wedge (\Xi(p, c)_s)_e = e\!\!\!\!
+\end{equation}
 
-The above relies on two functions, $\importsegmentdata$ and $\extrinsicdata$ which, respectively, define the import segment data and the extrinsic data for some work-item argument $w$:
+As long as the guarantor is unable to satisfy the above constraints, then it should consider the work-package unable to be guaranteed. Auditors are not expected to populate this but rather to reuse the value in the work-report they are auditing.
+
+The next term to be introduced, $\mathbf{o}$, is the authorization output, the result of the Is-Authorized function. The second term, $(\mathbf{r}, \overline{\mathbf{e}})$ is the sequence of results for each of the work-items in the work-package together with all segments exported by each work-item. The third definition $\countupexports$ performs an ordered accumulation (\ie counter) in order to ensure that the Refine function has access to the total number of exports made from the work-package up to the current work-item.
+
+The above relies on two functions, $\importsegmentdata$ and $\extrinsicdata$ which, respectively, define the import segment data and the extrinsic data for some work-item argument $w$. We also define $J$, which compiles justifications of segment data:
 \begin{equation}
   \begin{aligned}
-    \importsegmentdata(\wiX \in \mathbb{I}) &\equiv [\mathbf{s}[n] \mid (\mathcal{M}(\mathbf{s}), n) \orderedin \wiX_\wi¬importsegments] \\
-    \extrinsicdata(\wiX \in \mathbb{I}) &\equiv [\mathbf{d} \mid (\mathcal{H}(\mathbf{d}), |\mathbf{d}|) \orderedin \wiX_\wi¬extrinsics]
+    \extrinsicdata(\wiX \in \mathbb{I}) &\equiv [\mathbf{d} \mid (\mathcal{H}(\mathbf{d}), |\mathbf{d}|) \orderedin \wiX_\wi¬extrinsics] \\
+    \importsegmentdata(\wiX \in \mathbb{I}) &\equiv [\mathbf{s}[n] \mid \mathcal{M}(\mathbf{s}) = L(r), (r, n) \orderedin \wiX_\wi¬importsegments] \\
+    \justifysegmentdata(\wiX \in \mathbb{I}) &\equiv [\var{\mathcal{J}(\mathbf{s}, n)} \mid \mathcal{M}(\mathbf{s}) = L(r), (r, n) \orderedin \wiX_\wi¬importsegments]
   \end{aligned}
 \end{equation}
 
 We may then define $s$ as the data availability specification of the package using these two functions together with the yet to be defined \emph{Availability Specifier} function $\newavailabilityspecifier$ (see section \ref{sec:availabiltyspecifier}):
 \begin{equation}
-  \begin{aligned}
-    s &= \newavailabilityspecifier(\mathcal{H}(\wpX), \se(\wpX, \mathbf{x}, \mathbf{i}, \mathbf{j}), \wideparen{\overline{\mathbf{e}}}) \\
-    \where \mathbf{x} &= [\extrinsicdata(\wiX) \mid \wiX \orderedin \wpX_\wp¬workitems]\\
-    \also \mathbf{i} &= [\importsegmentdata(\wiX) \mid \wiX \orderedin \wpX_\wp¬workitems]\\
-    \also \mathbf{j} &= [\var{\mathcal{J}(\mathbf{s}, n)} \mid (\mathcal{M}(\mathbf{s}), n) \orderedin \wiX_\wi¬importsegments, \wiX \orderedin \wpX_\wp¬workitems]
-  \end{aligned}
+  s = \newavailabilityspecifier(
+    \mathcal{H}(\wpX),
+    \se(
+      \wpX,
+      \extrinsicdata^\#(\wpX_\wp¬workitems),
+      \importsegmentdata^\#(\wpX_\wp¬workitems),
+      \justifysegmentdata^\#(\wpX_\wp¬workitems)
+    ),
+    \wideparen{\overline{\mathbf{e}}}
+  )\!\!\!\!
 \end{equation}
 
-Note that while $\importsegmentdata$ and $\mathbf{j}$ are both formulated using the term $\mathbf{s}$ (all segments exported by all work-packages exporting a segment to be imported) such a vast amount of data is not generally needed as the justification can be derived through a single paged-proof. This reduces the worst case data fetching for a guarantor to two segments for every one to be imported. In the case that contiguously exported segments are imported (which we might assume is a fairly common situation), then a single proof-page should be sufficient to justify many imported segments.
+Note that while $\importsegmentdata$ and $\justifysegmentdata$ are both formulated using the term $\mathbf{s}$ (all segments exported by all work-packages exporting a segment to be imported) such a vast amount of data is not generally needed as the justification can be derived through a single paged-proof. This reduces the worst case data fetching for a guarantor to two segments for every one to be imported. In the case that contiguously exported segments are imported (which we might assume is a fairly common situation), then a single proof-page should be sufficient to justify many imported segments.
 
-Also of note is the lack of length prefixes: only the Merkle paths for the justifications (\ie the elements of $\mathbf{j}$) have a length prefix. All other sequence lengths are determinable through the work package itself.
+Also of note is the lack of length prefixes: only the Merkle paths for the justifications have a length prefix. All other sequence lengths are determinable through the work package itself.
 
-The Is-Authorized logic it references is first executed to ensure that the work-package warrants the needed core-time. Next, the guarantor should ensure that all segment-tree roots which form imported segment commitments are known and have not expired. Finally, the guarantor should ensure that they can fetch all preimage data referenced as the commitments of extrinsic segments.
+The Is-Authorized logic it references must be executed first in order to ensure that the work-package warrants the needed core-time. Next, the guarantor should ensure that all segment-tree roots which form imported segment commitments are known and have not expired. Finally, the guarantor should ensure that they can fetch all preimage data referenced as the commitments of extrinsic segments.
 
 Once done, then imported segments must be reconstructed. This process may in fact be lazy as the Refine function makes no usage of the data until the \emph{import} host-call is made. Fetching generally implies that, for each imported segment, erasure-coded chunks are retrieved from enough unique validators (342, including the guarantor) and is described in more depth in appendix \ref{sec:erasurecoding}. (Since we specify systematic erasure-coding, its reconstruction is trivial in the case that the correct 342 validators are responsive.) Chunks must be fetched for both the data itself and for justification metadata which allows us to ensure that the data is correct.
 
@@ -222,8 +244,8 @@ Validators, in their role as availability assurers, should index such chunks acc
 We define the availability specifier function $\newavailabilityspecifier$, which creates an availability specifier from the package hash, an octet sequence of the audit-friendly work-package bundle (comprising the work-package itself, the extrinsic data and the concatenated import segments along with their proofs of correctness), and the sequence of exported segments:
 \begin{equation}
   \!\!\!\newavailabilityspecifier\colon\left\{\,\begin{aligned}
-    &\tuple{\H, \Y, \seq{\G}} \to \mathbb{S}\\
-    &\tup{h, \mathbf{b},\,\mathbf{s}} \mapsto \tup{
+    \tuple{\H, \Y, \seq{\G}} &\to \mathbb{S}\\
+    \tup{h, \mathbf{b},\,\mathbf{s}} &\mapsto \tup{
       h,\,
       \is{l}{|\mathbf{b}|},\,
       u,\,
@@ -235,7 +257,7 @@ We define the availability specifier function $\newavailabilityspecifier$, which
   \where u &= \mathcal{M}_B(
     [\wideparen{\mathbf{x}} \mid \mathbf{x} \orderedin \transpose[\mathbf{b}^\clubsuit, \mathbf{s}^\clubsuit]]
   )\\
-  \also \mathbf{b}^\clubsuit &= \mathcal{H}^\#(\mathcal{C}_{\ceil{\nicefrac{|\mathbf{b}|}{\mathsf{W}_C}}}(\mathcal{P}_{\mathsf{W}_C}(\mathbf{b})))\\
+  \also \mathbf{b}^\clubsuit &= \mathcal{H}^\#(\mathcal{C}_{\ceil{\nicefrac{|\mathbf{b}|}{\mathsf{W}_E}}}(\mathcal{P}_{\mathsf{W}_E}(\mathbf{b})))\\
   \also \mathbf{s}^\clubsuit &= \mathcal{M}_B^\#(\transpose\mathcal{C}^\#_6(\mathbf{s} \concat \pagedproofs(\mathbf{s})))
 \end{align*}
 
